--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# dependencies
+node_modules/
+
+# testing
+coverage/
+
+# production
+build/
+dist/
+
+# misc
+stats.json
+.cache
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.yarnclean
+
+cypress/screenshots/
+cypress/match-screenshots/diff/
+cypress/match-screenshots/new/
+
+
 # Logs
 logs
 *.log
